数据接收入库
